<?xml version="1.0"?>
<package>
  <name>st_msgs</name>
  <version>1.1.3</version>
  <description>ST Data Package</description>
  <maintainer email="xzt@email.todo">xzt</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com</url>
  <author email="xzt@email.todo">xzt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
</package>
